# caching-template-for-objects

./: .gitignore  CMakeLists.txt  README.md  tests.cpp
src/: Cache.hpp  Cache_data.hpp
src/cache_policies/: lfu_policy.hpp  lfuda_policy.hpp  lru_policy.hpp
